# WebJson

./: .gitignore  CMakeLists.txt  README.md
docs/: PROJECT_SPEC.md
openspec/: config.yaml
openspec/changes/improve-frontend-ui/: design.md  proposal.md  tasks.md
openspec/changes/improve-frontend-ui/specs/frontend-ux/: spec.md
public/: app.js  index.html  style.css  worker.js
scripts/: setup_and_run_playwright.sh
specs/frontend-ux/: spec.md
src/: main.cpp
test/: run_headless_test.py
